--- a/.chezmoiexternal.toml.tmpl
+++ b/.chezmoiexternal.toml.tmpl
@@ -45,7 +45,7 @@
 # Linux only external archives
 ###########################################################################
 {{- if eq .chezmoi.os "linux" }}
-["/usr/local/nvim"]
+["../../usr/local/nvim"]
     type = "archive"
     url = "https://github.com/neovim/neovim/releases/latest/download/nvim-linux64.tar.gz"
     exact = true
