--- a/run_onchange_before_install-packages.sh.tmpl
+++ b/run_onchange_before_install-packages.sh.tmpl
@@ -1,5 +1,6 @@
 #!/bin/bash
 
+{{ if eq .chezmoi.os "linux" }}
 sudo apt-get update
 sudo apt-get upgrade
 # check if git does not exists
@@ -20,5 +21,12 @@ sudo apt-get install -y tmux
 # install clipboard tools
 sudo apt install xsel
 
+# install zsh
+sudo apt install zsh
+zsh --version &>/dev/null
+if [[ "$?" -eq 0 ]]; then
+  chsh -s $(which zsh)
+fi
 # install configuration sync-er
 # sh -c "$(curl -fsLS get.chezmoi.io)"
+{{- end -}}
