converted zshrc to template

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -112,7 +112,7 @@ export EDITOR='nvim'
 #
 # Custom Settings 
 # Java & Android 
-{{- if eq .chezmoi.os "darwin" -}}
+{{ if eq .chezmoi.os "darwin" -}}
 export PATH=$PATH:"/Applications/IntelliJ IDEA.app/Contents/plugins/maven/lib/maven3/bin"
 export PATH=$PATH:/Library/Java/JavaVirtualMachines/jdk-14.0.1.jdk/Contents/Home/bin
 export PATH=~/Library/Android/sdk/tools:$PATH
@@ -152,7 +152,7 @@ notify() {
 alias chrome='open -a "Google Chrome"'
 alias work="timer 60m && notify 'Break Time!, padi mi, stretch leg, drink water'"
 alias rest="timer 10m && notify 'Break is over! Get back to work 😊'"
-{{- end -}}
+{{- end }}
 
 # zsh-wakatime
 export ZSH_WAKATIME_PROJECT_DETECTION=true
