--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -74,10 +74,11 @@ ENABLE_CORRECTION="true"
 # Add wisely, as too many plugins slow down shell startup.
 plugins=(
 	git
+  zsh-vi-mode
 	zsh-syntax-highlighting
 	zsh-autosuggestions
 	zsh-wakatime
-  zsh-vi-mode
+  kubectl
 )
 
 source $ZSH/oh-my-zsh.sh
@@ -108,6 +109,10 @@ export EDITOR='nvim'
 #
 # Example aliases
 # alias zshconfig="mate ~/.zshrc"
+{{ if eq .chezmoi.os "linux" }}
+alias pbcopy='xclip -selection clipboard'
+alias pbpaste='xclip -selection clipboard -o' 
+{{- end }}
 # alias ohmyzsh="mate ~/.oh-my-zsh"
 #
 # Custom Settings 
@@ -178,3 +183,6 @@ ZVM_VI_INSERT_ESCAPE_BINDKEY=jk
 {{- end }}
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
+
+# Kubernetes
+export KUBECONFIG=$HOME/.kube/kubeconf
