--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -12,7 +12,11 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pb
 set -g base-index 1
 set -g pane-base-index 1
 set -g mouse on
+{{- if eq .chezmoi.os "linux" }}
+set -g default-terminal "tmux-256color"
+{{ else -}}
 set -g default-terminal "xterm-256color"
+{{ end -}}
 set -g renumber-windows on
 set -g focus-events on
 
