--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -74,6 +74,7 @@ ENABLE_CORRECTION="true"
 # Add wisely, as too many plugins slow down shell startup.
 plugins=(
 	git
+  fzf
   zsh-vi-mode
 	zsh-syntax-highlighting
 	zsh-autosuggestions
