--- a/dot_tmux.conf.tmpl
+++ b/dot_tmux.conf.tmpl
@@ -14,9 +14,9 @@ set -g pane-base-index 1
 set -g mouse on
 {{- if eq .chezmoi.os "linux" }}
 set -g default-terminal "tmux-256color"
-{{ else -}}
+{{- else }}
 set -g default-terminal "xterm-256color"
-{{ end -}}
+{{- end }}
 set -g renumber-windows on
 set -g focus-events on
 
