--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -71,6 +71,7 @@ plugins=(
 	zsh-autosuggestions
 	zsh-wakatime
   kubectl
+  z
 )
 
 source $ZSH/oh-my-zsh.sh
@@ -168,11 +169,9 @@ autoload -U compinit; compinit
 
 # ZVM configs (vim mode in zsh)
 ZVM_VI_INSERT_ESCAPE_BINDKEY=jk
-
-{{- if eq .chezmoi.os "darwin" }}
+ZVM_INIT_MODE=sourcing
 # fzf for fuzzy searching in the terminal
-[ -f ~/.fzf.zsh ] && source ~/.fzf.zsh
-{{- end }}
+zvm_after_init_commands+=('[ -f ~/.fzf.zsh ] && source ~/.fzf.zsh')
 
 # Kubernetes
 export KUBECONFIG=$HOME/.kube/kubeconf
