--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -103,8 +103,8 @@ export EDITOR='nvim'
 # Example aliases
 # alias zshconfig="mate ~/.zshrc"
 {{ if eq .chezmoi.os "linux" }}
-alias pbcopy='xclip -selection clipboard'
-alias pbpaste='xclip -selection clipboard -o' 
+alias pbcopy='xsel --clipboard --input'
+alias pbpaste='xsel --clipboard --output'
 {{- end }}
 # alias ohmyzsh="mate ~/.oh-my-zsh"
 #
