--- a/run_onchange_before_install-packages.sh.tmpl
+++ b/run_onchange_before_install-packages.sh.tmpl
@@ -1,5 +1,34 @@
 #!/bin/bash
 
+
+# -----------------------------------------------------------
+# GENERAL
+# -----------------------------------------------------------
+if [ ! -d "$HOME/.oh-my-zsh" ]; then
+	sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+fi
+git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k
+git clone https://github.com/jeffreytse/zsh-vi-mode $ZSH_CUSTOM/plugins/zsh-vi-mode
+git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
+git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
+git clone https://github.com/wbingli/zsh-wakatime.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-wakatime
+git clone --depth 1 https://github.com/junegunn/fzf.git ~/.fzf
+~/.fzf/install
+
+if ! [ -x "$(command -v go)" ]; then
+  {{- if eq .chezmoi.os "linux" }}
+  curl -OL https://go.dev/dl/go1.21.2.linux-amd64.tar.gz
+  sudo rm -rf /usr/local/go && sudo tar -C /usr/local -xzf go1.21.2.linux-amd64.tar.gz
+  rm -rf go1.21.2.linux-amd64.tar.gz
+  {{- else if eq .chezmoi.os "darwin" }}
+  brew install go
+  {{- end }}
+  go version
+fi
+
+# ------------------------------------------------
+# Linux
+# ------------------------------------------------
 {{- if eq .chezmoi.os "linux" }}
 sudo apt-get update
 sudo apt-get upgrade
@@ -53,26 +82,3 @@ if ! [ -x "$(command -v nvim)" ]; then
 fi
 {{- end }}
 
-# -----------------------------------------------------------
-# GENERAL
-# -----------------------------------------------------------
-if [ ! -d "$HOME/.oh-my-zsh" ]; then
-	sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
-  git clone https://github.com/jeffreytse/zsh-vi-mode $ZSH_CUSTOM/plugins/zsh-vi-mode
-  git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
-  git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
-  git clone https://github.com/wbingli/zsh-wakatime.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-wakatime
-  git clone --depth 1 https://github.com/junegunn/fzf.git ~/.fzf
-  ~/.fzf/install
-fi
-
-if ! [ -x "$(command -v go)" ]; then
-  {{- if eq .chezmoi.os "linux" }}
-  curl -OL https://go.dev/dl/go1.21.2.linux-amd64.tar.gz
-  sudo rm -rf /usr/local/go && sudo tar -C /usr/local -xzf go1.21.2.linux-amd64.tar.gz
-  rm -rf go1.21.2.linux-amd64.tar.gz
-  {{- else if eq .chezmoi.os "darwin" }}
-  brew install go
-  {{- end }}
-  go version
-fi
