feat: added kubernetes yaml autocomplete settings

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -181,7 +181,7 @@ ZVM_INIT_MODE=sourcing
 zvm_after_init_commands+=('[ -f ~/.fzf.zsh ] && source ~/.fzf.zsh')
 
 # Kubernetes
-export KUBECONFIG=$HOME/.kube/kubeconf
+# export KUBECONFIG=$HOME/.kube/kubeconf
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
